--- a/packages/vuetify/src/components/VDataTable/VVirtualTable.sass
+++ b/packages/vuetify/src/components/VDataTable/VVirtualTable.sass
@@ -7,15 +7,14 @@
   position: relative
 
 .v-virtual-table__scroller
-  position: absolute
-  top: 0
-  right: 0
   height: 100%
   width: $data-table-scroll-bar-width
   overflow-x: hidden
 
 .v-virtual-table__wrapper
-  position: relative
+  display: flex
+
+.v-virtual-table__table
   width: 100%
   height: 100%
   overflow-x: auto
